syntax = "proto3";

package protos;

option go_package = "github.com/hyperledger/fabric-protos-go/peer";

message PrepareRequestProto {
    string tx_id = 1;
    string shard_id = 2;
    map<string, bytes> read_set = 3;
    map<string, bytes> write_set = 4;
    int64 timestamp = 5;
}

message PrepareRequestBatch {
    repeated PrepareRequestProto requests = 1;
}

message PrepareProofProto {
    string tx_id = 1;
    string shard_id = 2;
    uint64 commit_index = 3;
    uint64 leader_id = 4;
    bytes signature = 5;
    uint64 term = 6;
}

message AbortEntry {
    string tx_id = 1;
    int64 timestamp = 2;
}
